--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,5 @@ sonar.projectVersion=1.0
 # =====================================================
 
 # SQ standard properties
+sonar.sources=SonarCloudTesting
 sonar.sourceEncoding=UTF-8
