--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,8 @@ sonar.projectVersion=1.0
 # SQ standard properties
 sonar.sources=SonarCloudTesting
 sonar.sourceEncoding=UTF-8
+
+# disable multithreading
+sonar.cfamily.threads=1
+# disable cache
+sonar.cfamily.cache.enabled=false
